Improve Backend Integration Tests (#13)
