# example/alembic/output/backend/openapi.json
@@ -2538,6 +2538,23 @@
           }
         }
       }
+    },
+    "/ready": {
+      "get": {
+        "summary": "Health",
+        "description": "Ready Endpoint",
+        "operationId": "health_ready_get",
+        "responses": {
+          "200": {
+            "description": "Successful Response",
+            "content": {
+              "application/json": {
+                "schema": {}
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
